--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,9 @@
 	<packaging>pom</packaging>
 	
 	<scm>
-        <url>git@github.com:renekrie/querqy.git</url>
-        <connection>scm:git:git@github.com:renekrie/querqy.git</connection>
-        <developerConnection>scm:git:git@github.com:renekrie/querqy.git</developerConnection>
+        <url>git@github.com:lichtsprung/querqy.git</url>
+        <connection>scm:git:git@github.com:lichtsprung/querqy.git</connection>
+        <developerConnection>scm:git:git@github.com:lichtsprung/querqy.git</developerConnection>
   	  <tag>querqy-parent-1.3.0</tag>
   </scm>
 
